--- a/sotopong/static/index.html
+++ b/sotopong/static/index.html
@@ -743,7 +743,7 @@ function PlayersPage({ players, onDelete, onOpenAdd }) {
         })}
         <div className="row-hover desk-flex" onClick={onOpenAdd}
           style={{ alignItems:"center", justifyContent:"center", gap:6, padding:"11px 16px", cursor:"pointer" }}>
-          <div style={{ fontSize:14, fontWeight:600, color:"#6B7A8D" }}>Добавить игрока...</div>
+          <div style={{ fontSize:14, fontWeight:600, color:"#6B7A8D" }}>Добавить игрока</div>
           <span style={{ fontSize:18, color:"#6B7A8D", fontWeight:700, lineHeight:1 }}>+</span>
         </div>
       </div>
@@ -792,7 +792,7 @@ function PlayersPage({ players, onDelete, onOpenAdd }) {
               gap:6, color:"#6B7A8D" }}
             onMouseEnter={e=>{e.currentTarget.style.borderColor="#E8822A";e.currentTarget.style.background="#FFFAF6";e.currentTarget.style.color="#E8822A";}}
             onMouseLeave={e=>{e.currentTarget.style.borderColor="#9AA5B4";e.currentTarget.style.background="#fff";e.currentTarget.style.color="#6B7A8D";}}>  
-            <span style={{ fontWeight:600, fontSize:15 }}>Добавить игрока...</span>
+            <span style={{ fontWeight:600, fontSize:15 }}>Добавить игрока</span>
             <span style={{ fontSize:20, fontWeight:700, lineHeight:1 }}>+</span>
           </div>
         </div>
